maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: not enough arguments for constructor Array: (_length: Int)Array[Array[Int]].
Unspecified value parameter _length.
  var result:Array[Array[Int]] = new Array[Array[Int]]()
                                 ^