maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
def trouveLaSortie(): Array[Int] = {
  var xMax:Int = getMondeLargeur() - 1
	var yMax:Int = getMondeHauteur() - 1
  
  for (x <- 0 to xMax) {
    for (y <- 0 to yMax) {
      if (aBiscuit(x, y))
      	return Array[Int](x, y)
    }
  }
  
  return Array[Int](2)
}

def casesAdjacentes(pos: Array[Int]): Array[Array[Int]] = {
  var result:Array[Array[Int]] = new Array[Array[Int]]()
  
  return result
}

def ecritIndications() {
  // Tout d'abord, il faut trouver la sortie ! :p
  var posSortie:Array[Int] = trouveLaSortie()
  
  setIndication(posSortie(0), posSortie(1), 0)
  
  // Maintenant on écrit les indications sur les cases adjacentes de façon récursive.
}

override def run() {
  var xMax:Int = getMondeLargeur() - 1
	var yMax:Int = getMondeHauteur() - 1
  
  // On commence par écrire les indications sur les cases.
  ecritIndications()
}